# Ecoblocks

./: .env .example  LICENSE  README.md  docker-compose.yaml  init.sh  init.sql  init.sql.template
ecoblock-API/: .env  .env .example  Cargo.toml  Dockerfile  diesel.toml
ecoblock-API/migrations/2024-06-05-111723_create_users/: up.sql
ecoblock-API/migrations/2024-06-17-130258_create_posts/: down.sql
ecoblock-API/migrations/2024-06-18-075359_create_users/: up.sql
ecoblock-API/migrations/2024-06-18-142244_create_posts/: up.sql
ecoblock-API/migrations/2024-06-20-144359_create_products/: up.sql
ecoblock-API/src/: actions.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs  schema.rs  startup.rs
ecoblock-API/src/features/: mod.rs
ecoblock-API/src/features/auth/: routes.rs
ecoblock-API/src/features/health_check/: handlers.rs  mod.rs  routes.rs
ecoblock-API/src/features/logger/: handlers.rs  logger.rs  routes.rs
ecoblock-API/src/features/users/: mod.rs
ecoblock-API/src/middleware/: api_key.rs  auth.rs
ecoblock-API/src/models/: user.rs
ecoblock-API/src/posts/: actions.rs  handlers.rs  models.rs  routes.rs
ecoblock-API/src/routes/: mod.rs
ecoblock-API/src/routes/posts/: actions.rs  handlers.rs  mod.rs  models.rs  routes.rs
ecoblock-API/src/routes/products/: actions.rs  handlers.rs  models.rs  routes.rs
ecoblock-API/src/routes/users/: actions.rs  auth.rs  handlers.rs  mod.rs  models.rs  routes.rs
ecoblock-API/src/users/: actions.rs  handlers.rs  mod.rs  routes.rs
ecoblock-API/src/utils/: decode_jwt.rs  mod.rs  reggex.rs  snowflake_generator.rs
ecoblock-blockchain/: .env  .env .example  Cargo.toml  DockerFile
ecoblock-blockchain/src/: block.rs  blockchain.rs  consensus.rs  db.rs  main.rs  tangle.rs  transaction.rs  wallet.rs
ecoblock-cms/: DockerFile  package-lock.json  package.json
ecoblock-cms/src/: App.js  LoginPage.css  LoginPage.js  api.js  authProvider.js  checkApiConnectivity.js  dataProvider.js
ecoblock-cms/src/components/: BingIntField.js  posts.js  products.js  users.js
ecoblock-cms/src/pages/: LoginPage.js
ecoblock-cms/src/posts/: postCreate.js  postEdit.js  postList.js
ecoblock-webapp/: DockerFile  package-lock.json  package.json
ecoblock-webapp/public/: index.html
ecoblock-webapp/src/: App.css  App.js  config.js  config.js.example  variable.css  variables.css
(+72 files in other folders)
