[package]
name = "ecoblock-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }


[dev-dependencies]
actix-rt = "2.5"
diesel_migrations = "2.0"

[dependencies.diesel_migrations]
version = "2.0"

[print_schema]
file = "src/schema.rs"

[migrations_directory]
path = "migrations"

[[bin]]
name = "ecoblock-api"
path = "src/main.rs"
