[package]
name = "ecoblock-api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bcrypt = "0.15.1"
lazy_static = "1.4.0"
log = "0.4.8"
r2d2 = "0.8.8"
rs-snowflake = "0.6.0"