[package]
name = "ecoblock-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
mongodb = "2.3.0"
log = "0.4"
env_logger = "0.11.3"
dotenvy="0.15.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
